--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -13,6 +13,10 @@ jobs:
       security-events: write
       actions: read
       contents: read
+    strategy:
+     fail-fast: false
+     matrix:
+       language: ['javascript', 'python']
 
     steps:
       - name: Checkout repository
@@ -20,11 +24,10 @@ jobs:
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
-        with:
-          languages: cpp, csharp, python
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
 
-  
+
+
 
